# lem_in

./: CMakeLists.txt  Makefile  ants.c  error.c  free.c  help.c  help2.c  help3.c  help4.c  help_fill_list.c  lem_in  lem_in.h  list_create.c  main.c  opimize_list.c  optimize_list.c  routers.c  test.map  validation.c  validation_after_read.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstget_node.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush_back.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+25 more)
libft/ft_printf/: Makefile  convert.c  convert_count.c  do.c  ft_alloc.c  ft_itoa_ubase.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_wcslen.c  fta.c  is.c  not_valid_type.c  print_c.c  print_d.c  print_d_2.c  print_f.c  print_o.c  print_p.c  print_per.c  print_s.c  print_str.c  print_u.c  print_x.c  zero.c
libft/get_next_line/: author  get_next_line.c  get_next_line.h
